--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -14,6 +14,9 @@
     <p class="card-text">Closing Time: {{restaurant.closing_time}}</p>
     <div class="row text-center">
         <div class="col-md-6">
+          {% if restaurant.logo %}
+          <img src="{{restaurant.logo.url}}">
+          {% endif %}
             <a href="{% url 'restaurant-update' restaurant.id %}" class="btn btn-outline-primary btn-block">Update</a>
         </div>
         <div class="col-md-6">
